hard-gists/81635e6cbc933b7e8862/run.log
=== Docker Run Log for 81635e6cbc933b7e8862 ===
Started at: Mi 29. Okt 17:40:12 CET 2025

[2025-10-29 17:40:12] START: Running container for 81635e6cbc933b7e8862
[2025-10-29 17:40:12] SUCCESS: Container 4341913ef860996b893985354eb476a7ab2b340687fe854ed646107735d436f8 started for 81635e6cbc933b7e8862
=== Container logs for 81635e6cbc933b7e8862 ===
  File "/snippet.py", line 8
    print "Usage: bouncer.py <path_to_logic_project> (<path_to_logic_project>)"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 81635e6cbc933b7e8862 ===
[2025-10-29 17:40:14] INFO: Container 4341913ef860996b893985354eb476a7ab2b340687fe854ed646107735d436f8 has stopped
